2017-07-08 v1.0.9 compatibility for PrestaShop version 1.6.1.15
2017-04-25 v1.0.8 compatibility for PrestaShop version 1.6.1.13
2017-03-23 v1.0.7 compatibility for PrestaShop version 1.6.1.12
2017-01-30 v1.0.6 compatibility for PrestaShop version 1.6.1.2 and 1.6.1.3
2017-01-23 v1.0.5 compatibility for PrestaShop version 1.6.1.4
2017-01-17 v1.0.4 - PrestaShop version 1.6.1.11
                  - added absolute directory path for included classes
                  - refresh of class index after install or ugrade
2016-12-07 v1.0.3 PrestaShop version 1.6.1.10
2016-11-23 v1.0.2 hided asterisk from invoice_dni field by CSS
2016-11-01 v1.0.1 PrestaShop version 1.6.1.8