@@ -1,3 +1,4 @@
+2017-08-08 v1.0.10 compatibility for PrestaShop version 1.6.1.16
 2017-07-08 v1.0.9 compatibility for PrestaShop version 1.6.1.15
 2017-04-25 v1.0.8 compatibility for PrestaShop version 1.6.1.13
 2017-03-23 v1.0.7 compatibility for PrestaShop version 1.6.1.12
